changes hoi hein

--- a/ProJect_02/index.html
+++ b/ProJect_02/index.html
@@ -14,7 +14,7 @@
 <body>
     
        <div class="col">
-            <nav class="navbar px-5 ml-2 navbar-expand-lg navbar-dark bg-dark   ">
+            <nav class="navbar px-5 ml-2 navbar-expand-lg navbar-dark bg-info  ">
                 <a href="#" class="navbar-brand col-4"><img src="Salt'n Paper.webp" width="150px" alt=""></a>
 
                 <ul class="navbar-nav col-4 ml-1 text-white >
